# what-drives-the-value-of-tech-stocks

./: README.md  Transfer Entropy with tech etfs.ipynb  Transfer Entropy with tech etfs.py  article.md  config.yaml  main.py  pyproject.toml  requirements.txt  script.py
article-operations-research-and-time-series/: 2025-05-20 OR tools example.ipynb  2025-05-20 OR tools example.py  pyproject.toml  requirements.txt
src/: __init__.py  core.py
