[project]
name = "what-drives-the-value-of-tech-stocks"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "ortools>=9.15.6755",
    "pandas>=3.0.3",
    "pyinform>=0.2.0",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
    "transformers>=5.8.1",
    "yfinance>=1.3.0",
]

[tool.uv.workspace]
members = [
    "article-operations-research-and-time-series",
]
